src/objects/Account_To_Territory__c.object
<CustomObject>
    <description>This object is to map the accounts with associated territories.

TEMPORARY OBJECT
Heroku Connect doesn&apos;t update the standard object ObjectTerritory2Association and that all functional logic will have to be based on the standard object ObjectTerritory2Association.</description>
    <fields>
        <fullName>Account_Business_Role_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to reference the appropriate business role to which the territory is assigned to</description>
        <inlineHelpText>This is used to reference the appropriate business role to which the territory is assigned to</inlineHelpText>
        <label>Account Business Role</label>
        <referenceTo>Account_Business_Role__c</referenceTo>
        <relationshipLabel>Accounts to Territories</relationshipLabel>
        <relationshipName>Accounts_to_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_SFID__c</fullName>
        <description>This field is to associate the record with an account</description>
        <inlineHelpText>This field is to associate the record with an account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts to Territories</relationshipLabel>
        <relationshipName>Accounts_to_Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AssociationCause__c</fullName>
        <description>Territory2Manual</description>
        <inlineHelpText>Territory2Manual</inlineHelpText>
        <label>AssociationCause</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HC_Integration_Key__c</fullName>
        <description>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</inlineHelpText>
        <label>Heroku Connect Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Territories are loaded into this field(THIS OBJECT IS TEMPORARY)</description>
        <inlineHelpText>Territories are loaded into this field(THIS OBJECT IS TEMPORARY)</inlineHelpText>
        <label>Territory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account To Territory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Accounts to Territories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts to Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>